Implement basic PID functionality
